Adding equals in CoursePerf + Adding unit tests for getTeacherPrefs and getCoursePrefs